Remove shebang, so we don't have to worry about path issues. We'll just invoke with bash. Also, since the image has a version of deploy.sh that isn't executable, this should fix that too.
Also, need to update the cerbero repo in the image to get these changes. Doesn't feel like the right way to do this, but not sure what else to try.

--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,10 @@ environment:
   SDK_TEST_BASE_URL: "https://artifactory.mersive.xyz/artifactory/android/"
 
 steps:
+  - name: update cerbero repo
+    image: artifactory.mersive.xyz/docker-public/gstreamer-android-builder
+    commands:
+      - cd /cerbero && git pull
   - name: gstreamer build
     image: artifactory.mersive.xyz/docker-public/gstreamer-android-builder
     commands:
@@ -20,7 +24,7 @@ steps:
   - name: Deploy Artifacts
     image: artifactory.mersive.xyz/docker-public/gstreamer-android-builder
     commands:
-      - cd /cerbero && ./deploy.sh
+      - cd /cerbero && bash ./deploy.sh
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: artifactory-password
